# aoc_rust

./: '  Cargo.toml  README.md  day21.txt  perf.data  perf.data.old  rustc-ice-2023-12-23T11_15_18-2047930.txt  rustc-ice-2023-12-23T11_28_13-2048695.txt  trenches.txt
.cargo/: config.toml
benches/: bench.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day12_ref_cell.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
src/aoc2015/: bench_all.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2016/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
src/aoc2021/: day1.rs  day10.rs  day11.rs  day12.rs  day12_ref_cell.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/aoc2023/: bench_all.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
