[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
rustc-hash = "1.1.0"
regex = "1.6.0"
itertools = "0.10"
divan = "0.1.0"
rayon = "1.8.0"
md-5 = "0.10.6"
serde_json = "1.0.108"

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
